Chapter2/1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-3-svc
spec:
  selector:
    app: log-output-3
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
